src/test/Properties2/Properties2.expected
error: Properties2.panda:4:2: property 'a' has neither a getter nor a setter
error: Properties2.panda:7:2: property getters must be functions
error: Properties2.panda:9:2: property 'c' has type 'panda.core.String', but 'get_c' returns 'panda.core.Int32'
error: Properties2.panda:11:2: property 'c' has type 'panda.core.String', but 'set_c' accepts 'panda.core.Int32'
error: Properties2.panda:1:1: expected only one 'get_d' method, but found:
    function get_d():panda.core.String
    function get_d():panda.core.Int32
error: Properties2.panda:1:1: expected only one 'set_d' method, but found:
    method set_d():panda.core.String
    method set_d():panda.core.Int32
error: Properties2.panda:19:1: property setters may not have a return type
7 errors
