src/test/Properties2/Properties2.panda
class Properties2 {
	property a:Int

	property b:String
	method get_b():String { return "b" }

	property c:String
	function get_c():Int { return 42 }
	method set_c(c:Int) { }

	property d:String
	function get_d():String { return "d" }
	function get_d():Int { return 12 }
	method set_d():String { return "d" }
	method set_d():Int { return 12 }

	property e:String
	method set_e(e:String):Int { return 12 }
}